// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth WelcomeScreen (prototype 00) Android 360x800: clears the status bar with breathing room and keeps the footer off the gesture bar 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F5EFE4",
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 36,
      },
      undefined,
    ]
  }
  testID="welcome"
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "justifyContent": "center",
          "minHeight": 44,
          "paddingHorizontal": 24,
        }
      }
    >
      <Text
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "color": "#1A1A18",
            "fontFamily": "CormorantGaramond_500Medium",
            "fontSize": 20,
            "fontWeight": "500",
            "letterSpacing": 4,
            "lineHeight": 25,
          }
        }
        testID="welcome-wordmark"
      >
        TGP
      </Text>
    </View>
    <View
      style={
        [
          {
            "flex": 1,
          },
          [
            {
              "flexGrow": 1,
              "paddingHorizontal": 24,
            },
            {
              "justifyContent": "center",
            },
            {
              "paddingBottom": 24,
            },
            undefined,
          ],
        ]
      }
      testID="welcome-scroll"
    >
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 11,
              "fontWeight": "500",
              "letterSpacing": 1.98,
              "lineHeight": 13,
              "marginBottom": 6,
              "textTransform": "uppercase",
            },
            {
              "color": "#6B675F",
            },
            undefined,
          ]
        }
        testID="welcome-eyebrow"
      >
        Personal training, in your pocket
      </Text>
      <Text
        accessibilityRole="header"
        maxFontSizeMultiplier={1.4}
        style={
          [
            {
              "fontFamily": "CormorantGaramond_400Regular",
              "fontSize": 44,
              "fontWeight": "400",
              "letterSpacing": 0.4,
              "lineHeight": 55,
            },
            {
              "color": "#1A1A18",
              "textAlign": "left",
            },
            {
              "marginTop": 12,
            },
          ]
        }
      >
        The Growth Project
      </Text>
      <View
        accessible={false}
        style={
          {
            "backgroundColor": "#B08D57",
            "height": 1,
            "marginVertical": 24,
            "width": 48,
          }
        }
      />
      <Text
        style={
          [
            {
              "fontFamily": "Inter_400Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": -0.16,
              "lineHeight": 26,
            },
            {
              "marginTop": 8,
            },
            {
              "color": "#6B675F",
              "textAlign": "left",
            },
            undefined,
          ]
        }
      >
        A plan, daily targets, and a coach who knows you.
      </Text>
    </View>
    <View
      style={
        [
          {
            "gap": 8,
            "paddingHorizontal": 24,
            "paddingTop": 12,
          },
          {
            "paddingBottom": 24,
          },
        ]
      }
      testID="welcome-footer"
    >
      <View
        accessibilityHint="Opens account creation"
        accessibilityLabel="Get started"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderRadius": 12,
              "justifyContent": "center",
              "minHeight": 54,
              "overflow": "hidden",
              "paddingHorizontal": 24,
            },
            {
              "backgroundColor": "#2C4A36",
            },
            undefined,
          ]
        }
        testID="welcome-get-started"
      >
        <Text
          maxFontSizeMultiplier={1.6}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Inter_500Medium",
                "fontSize": 16,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 22,
                "textAlign": "center",
              },
              {
                "color": "#FBF7F0",
              },
            ]
          }
        >
          Get started
        </Text>
      </View>
      <View
        accessibilityHint="Opens sign-in"
        accessibilityLabel="Log in"
        accessibilityRole="link"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "justifyContent": "center",
              "minHeight": 44,
              "paddingHorizontal": 4,
            },
            {
              "alignSelf": "center",
            },
            false,
            undefined,
          ]
        }
        testID="welcome-log-in"
      >
        <Text
          style={
            [
              {
                "fontFamily": "Inter_400Regular",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": -0.16,
                "lineHeight": 22,
              },
              {
                "color": "#1A1A18",
              },
              {
                "textDecorationLine": "underline",
              },
            ]
          }
        >
          Log in
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`auth WelcomeScreen (prototype 00) iPhone 390x844: clears the status bar with breathing room and keeps the footer off the gesture bar 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F5EFE4",
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 59,
      },
      undefined,
    ]
  }
  testID="welcome"
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "justifyContent": "center",
          "minHeight": 44,
          "paddingHorizontal": 24,
        }
      }
    >
      <Text
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "color": "#1A1A18",
            "fontFamily": "CormorantGaramond_500Medium",
            "fontSize": 20,
            "fontWeight": "500",
            "letterSpacing": 4,
            "lineHeight": 25,
          }
        }
        testID="welcome-wordmark"
      >
        TGP
      </Text>
    </View>
    <View
      style={
        [
          {
            "flex": 1,
          },
          [
            {
              "flexGrow": 1,
              "paddingHorizontal": 24,
            },
            {
              "justifyContent": "center",
            },
            {
              "paddingBottom": 24,
            },
            undefined,
          ],
        ]
      }
      testID="welcome-scroll"
    >
      <Text
        style={
          [
            {
              "fontFamily": "Inter_500Medium",
              "fontSize": 11,
              "fontWeight": "500",
              "letterSpacing": 1.98,
              "lineHeight": 13,
              "marginBottom": 6,
              "textTransform": "uppercase",
            },
            {
              "color": "#6B675F",
            },
            undefined,
          ]
        }
        testID="welcome-eyebrow"
      >
        Personal training, in your pocket
      </Text>
      <Text
        accessibilityRole="header"
        maxFontSizeMultiplier={1.4}
        style={
          [
            {
              "fontFamily": "CormorantGaramond_400Regular",
              "fontSize": 44,
              "fontWeight": "400",
              "letterSpacing": 0.4,
              "lineHeight": 55,
            },
            {
              "color": "#1A1A18",
              "textAlign": "left",
            },
            {
              "marginTop": 12,
            },
          ]
        }
      >
        The Growth Project
      </Text>
      <View
        accessible={false}
        style={
          {
            "backgroundColor": "#B08D57",
            "height": 1,
            "marginVertical": 24,
            "width": 48,
          }
        }
      />
      <Text
        style={
          [
            {
              "fontFamily": "Inter_400Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": -0.16,
              "lineHeight": 26,
            },
            {
              "marginTop": 8,
            },
            {
              "color": "#6B675F",
              "textAlign": "left",
            },
            undefined,
          ]
        }
      >
        A plan, daily targets, and a coach who knows you.
      </Text>
    </View>
    <View
      style={
        [
          {
            "gap": 8,
            "paddingHorizontal": 24,
            "paddingTop": 12,
          },
          {
            "paddingBottom": 42,
          },
        ]
      }
      testID="welcome-footer"
    >
      <View
        accessibilityHint="Opens account creation"
        accessibilityLabel="Get started"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderRadius": 12,
              "justifyContent": "center",
              "minHeight": 54,
              "overflow": "hidden",
              "paddingHorizontal": 24,
            },
            {
              "backgroundColor": "#2C4A36",
            },
            undefined,
          ]
        }
        testID="welcome-get-started"
      >
        <Text
          maxFontSizeMultiplier={1.6}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Inter_500Medium",
                "fontSize": 16,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 22,
                "textAlign": "center",
              },
              {
                "color": "#FBF7F0",
              },
            ]
          }
        >
          Get started
        </Text>
      </View>
      <View
        accessibilityHint="Opens sign-in"
        accessibilityLabel="Log in"
        accessibilityRole="link"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "justifyContent": "center",
              "minHeight": 44,
              "paddingHorizontal": 4,
            },
            {
              "alignSelf": "center",
            },
            false,
            undefined,
          ]
        }
        testID="welcome-log-in"
      >
        <Text
          style={
            [
              {
                "fontFamily": "Inter_400Regular",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": -0.16,
                "lineHeight": 22,
              },
              {
                "color": "#1A1A18",
              },
              {
                "textDecorationLine": "underline",
              },
            ]
          }
        >
          Log in
        </Text>
      </View>
    </View>
  </View>
</View>
`;
